@@ -1,0 +1,24 @@
+# Generated by Django 5.0.4 on 2025-06-17 11:56
+
+import django.db.models.deletion
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('sasse', '0005_sektionsfahrengruppe_split_name_auf_rangliste_and_more'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Generationenpaar',
+            fields=[
+                ('teilnehmer_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='sasse.teilnehmer')),
+                ('creation_date', models.DateTimeField(auto_now_add=True)),
+                ('mitglied_1', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='mitglied_1', to='sasse.mitglied')),
+                ('mitglied_2', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='mitglied_2', to='sasse.mitglied')),
+            ],
+            bases=('sasse.teilnehmer',),
+        ),
+    ]
