@@ -1,0 +1,66 @@
+{% extends "base_generationenpaar.html" %}
+{% block nav_eingabe %}selected{% endblock %}
+{% block content %}
+{% load sasse %}
+<p><p/>
+<form id="myform" name="myform" action="" method="POST">
+<table class="form">
+  {% if form.non_field_errors %}
+  <tr>
+    <td colspan="2">{{ form.non_field_errors }}</td>
+  </tr>
+  {% endif %}
+  <tr>
+    <th>Paar Nr:</th>
+    <td>{{ form.startnummer.errors }}{{ form.startnummer }}</td>
+  </tr>
+  <tr>
+    <th>Mitglied 1:</th>
+    <td>{{ form.mitglied_1.errors }}{{ form.mitglied_1 }}</td>
+  </tr>
+  <tr>
+    <th>Mitglied 2:</th>
+    <td>{{ form.mitglied_2.errors }}{{ form.mitglied_2 }}</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td><input type="submit" value="Generationenpaar hinzufügen"/></td>
+  </tr>
+</table>
+</form>
+<table class="list">
+  <tr>
+    <th class="startnummer">Paar Nr</th>
+    <th>Mitglied 1</th>
+    <th>Mitglied 2</th>
+  </tr>
+  {% for row in page_obj %}
+  <tr class="{% cycle 'odd' 'even' %}">
+    <td class="startnummer"><a href="{% url 'generationenpaar_update' wettkampf.jahr wettkampf.name row.startnummer %}">{{ row.startnummer }}</a></td>
+    <td>{{ row.mitglied_1.name }}&nbsp;{{ row.mitglied_1.vorname }}<font size="-2"> {{ row.mitglied_1.geburtsdatum.year }}</font></td>
+    <td>{{ row.mitglied_2.name }}&nbsp;{{ row.mitglied_2.vorname }}<font size="-2"> {{ row.mitglied_2.geburtsdatum.year }}</font></td>
+  </tr>
+  {% endfor %}
+</table>
+<p></p>
+{% include "pagination.html" %}
+<script type="text/javascript">
+$(document).ready(function(){
+        $(':input:visible:eq(1)').focus().select();
+        textboxes = $("form:not(.filter) :input:visible:[type=text]");
+        $(textboxes).keydown(checkForEnter);
+});
+function checkForEnter(event) {
+    if (event.keyCode == 13) {
+        currentBoxNumber = textboxes.index(this);
+        nextBox = textboxes[currentBoxNumber + 1]
+        if (nextBox != null) {
+            nextBox.focus();
+            nextBox.select();
+            event.preventDefault();
+            return false;
+        }
+    }
+} 
+</script>
+{% endblock %}
